--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,8 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   intl: any
+  animated_custom_dropdown: ^3.1.1
+  provider: ^6.1.2
 
 
 
